修复本地化配置展示高度问题

--- a/Assets/Plugins/XIHI18N/Runtime/XIHI18N.asmdef
+++ b/Assets/Plugins/XIHI18N/Runtime/XIHI18N.asmdef
@@ -1,12 +1,8 @@
 {
-    "name": "XIH18N.Editor",
+    "name": "XIHI18N",
     "rootNamespace": "",
-    "references": [
-        "XIH18N"
-    ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "references": [],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
